Export of enums for mysql exporter added

BUG:400797
FIXED-IN:2.26.80 (KDE Applications 18.11.80)